# zerizeha

./: .env.example  .gitignore  README.md  docker-compose.prod.yml
.github/workflows/: deploy.yml  desktop-build.yml  desktop-release.yml  tauri-windows.yml
backend/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum  oapi-codegen.yaml
backend/cmd/: main.go
backend/docs/: EVENTS.md  openapi.yaml
backend/internal/api/: oapi.gen.go
backend/internal/app/: app.go  auth_middleware.go  service_provider.go
backend/internal/config/: config.go
backend/internal/dto/: chat.go  space.go  user.go  voice.go
backend/internal/repository/: repository.go
backend/internal/service/: service.go
backend/janus-conf/: janus.jcfg  janus.plugin.videoroom.jcfg
backend/migrations/: 20251219205528_create_user.sql  20251220122542_create_create_space_tables.sql  20251221181000_add_user_onboarding_fields.sql  20251222180000_backfill_space_members.sql  20260309150000_create_channel_messages.sql  20260610120000_add_password_auth.sql
backend/pkg/closer/: closer.go
backend/pkg/db/: db.go  utils.go
deploy/: Caddyfile  prometheus.yml
docs/: DEPLOY.md  FEATURES.md
web/: .dockerignore  .gitignore  Dockerfile  electron-builder.json  openapi-codegen.config.ts  package-lock.json  package.json
web/electron/: main.js  preload.js
web/scripts/: tauri-standalone.mjs  write-electron-build-config.js
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/loader/: index.html
web/src-tauri/src/: main.rs
(+91 files in other folders)
