[package]
name = "zerizeha"
version = "0.1.0"
description = "Zerizeha desktop app"
authors = ["gera"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tiny_http = "0.12"
urlencoding = "2.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
